# icub-tests

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  pixi.toml  set_path.sh
.github/workflows/: ci.yml  gh-pages.yml
doxygen/: Doxyfile  generate.txt  installation.dox  main.dox  tests.dox  writing-new-tests.dox
example/: ExampleTest.cpp  ExampleTest.h
example/cpp/: CMakeLists.txt  ExampleTest.h
example/cpp/ExampleFixture/: CMakeLists.txt  ExampleFixture.cpp  ExampleFixture.h
example/cpp/ExampleTest/: CMakeLists.txt  ExampleTest.cpp  ExampleTest.h
example/lua/: example-test.lua
example/suit/: test_suit.xml
include/: YarpTestCase.h
scripts/: gen-gh-pages.sh  icub_tests.sh
src/Accelerometers-reading/: CMakeLists.txt  MTBsensorParserCan.h  MTBsensorParserEth.h  accelerometersReading.cpp  accelerometersReading.h
src/accelerometers-reading/: AccelerometersReading.cpp  AccelerometersReading.h  CMakeLists.txt  DataLoaderFile.cpp  DataLoaderFile.h  DataLoaderPort.cpp  DataLoaderPort.h  GravityEstimator.cpp  GravityEstimator.h  IDataLoader.h  IMTBsensorParser.h  InterfaceDestructors.cpp  MTBsensorParserCan.cpp  MTBsensorParserCan.h  MTBsensorParserEth.cpp  MTBsensorParserEth.h  Plotter.cpp  Plotter.h  ValueDistribution.cpp  ValueDistribution.h
src/camera/: CMakeLists.txt  CameraTest.cpp  CameraTest.h
src/cartesian-control/: CMakeLists.txt  README.md
src/cluster-tests/: cluster-tests.lua
src/controlModes/: CMakeLists.txt  ControlModes.cpp  ControlModes.h
src/demoRedBall/: CMakeLists.txt  DemoRedBallTest.cpp  DemoRedBallTest.h
src/fixture-ymanager/: CMakeLists.txt  YarpFixManager.cpp  YarpFixManager.h
src/ftsensor-tests/: CMakeLists.txt  FtSensorTest.cpp  FtSensorTest.h
src/gaze-control/: CMakeLists.txt  README.md
src/gaze-control/simple-look/: CMakeLists.txt  GazeControlSimpleLookTest.cpp  GazeControlSimpleLookTest.h
src/imu/: CMakeLists.txt  README.md  imu.cpp  imu.h  move.sh  plot.xml
src/imu/report/: generate_report.mlx
src/jointLimits/: CMakeLists.txt  jointLimits.cpp  jointLimits.h
src/models-consistency/: CMakeLists.txt  README.md  iKiniDynConsistencyTest.cpp  iKiniDynConsistencyTest.h
src/motor-stiction/: CMakeLists.txt  MotorStiction.cpp  MotorStiction.h
src/motor-tests/: CMakeLists.txt  MotorTest.cpp  MotorTest.h
src/motorEncoders-consistency/: CMakeLists.txt  motorEncodersConsistency.cpp  motorEncodersConsistency.h
src/motorEncodersSignCheck/: CMakeLists.txt  motorEncodersSignCheck.cpp  motorEncodersSignCheck.h
src/motors-stress/: gazeController-stress.lua  position-stress.lua
src/movementReferencesTest/: CMakeLists.txt  movementReferencesTest.cpp  movementReferencesTest.h
src/openloop-consistency/: CMakeLists.txt  OpenloopConsistency.cpp  OpenloopConsistency.h  OpenloopConsitency.cpp  OpenloopConsitency.h
src/opticalEncoders/: CMakeLists.txt  opticalEncoders.cpp  opticalEncoders.h
src/opticalEncoders-consistency/: CMakeLists.txt  opticalEncoders.cpp  opticalEncoders.h  opticalEncodersConsistency.cpp  opticalEncodersConsistency.h
src/opticalEncoders-drift/: CMakeLists.txt  opticalEncodersDrift.cpp  opticalEncodersDrift.h
src/ports-frequency/: CMakeLists.txt  PortsFrequency.cpp  PortsFrequency.h
src/positionControl-accuracy/: CMakeLists.txt  PositionControlAccuracy.cpp  PositionControlAccuracy.h  plotDataPosition.m
src/positionControl-accuracy-ExternalPid/: CMakeLists.txt  PositionControlAccuracyExternalPid.cpp  PositionControlAccuracyExternalPid.h
src/positionDirect/: CMakeLists.txt  PositionDirect.cpp  PositionDirect.h
src/sensors-duplicate-readings/: CMakeLists.txt  SensorsDuplicateReadings.cpp  SensorsDuplicateReadings.h
src/skinWrapperTest/: CMakeLists.txt  README.md  SkinWrapperTest.cpp  SkinWrapperTest.h
src/system-status/: CMakeLists.txt  SystemStatus.cpp  SystemStatus.h
src/torqueControl-accuracy/: CMakeLists.txt  TorqueControlAccuracy.cpp  TorqueControlAccuracy.h  plotDataTorque.m
src/torqueControl-consistency/: CMakeLists.txt  TorqueControlConsistency.cpp  TorqueControlConsistency.h
src/torqueControl-gravityConsistency/: CMakeLists.txt  TorqueControlGravityConsistency.cpp  TorqueControlGravityConsistency.h
src/torqueControl-stiffDampCheck/: CMakeLists.txt  TorqueControlStiffDampCheck.cpp  TorqueControlStiffDampCheck.h
src/torqueControl-stiffDumpCheck/: CMakeLists.txt  TorqueControlStiffDumpCheck.cpp  (+1 more)
suites/: basics-icubGazeboSim.xml  basics-icubSim.xml  camera-icub.xml  camera-icubSim.xml  cartesian-control-icubGazeboSim.xml  cartesian-control-icubSim.xml  controlModes.xml  demoRedBall-icubSim.xml  encoders-icub.xml  encoders-icubGazeboSim.xml  encoders-icubSim.xml  encoders-icubV3.xml  ftSensorTests.xml  gaze-control-icubGazeboSim.xml  gaze-control-icubSim.xml  imu-icubGazeboSim.xml  imu.xml  jointsLimits_robotCan.xml  jointsLimits_robotEth.xml  motorControlInterfaces-icub.xml  motorStiction.xml  motors-icubGazeboSim.xml  motors-icubSim.xml  positionDirect-icub.xml  positionDirect-icubSim.xml  skinWrapper-YarpPluginFixture.xml  streamingChecks.xml  torqueStiffDampCheck_example.xml
suits/: accelerometersDiag_icubGazeboSim.xml  accelerometersDiag_robotCan.xml  accelerometersDiag_robotEth.xml  basics-icub.xml  basics-icubGazeboSim.xml  basics-icubSim.xml  camera-icub.xml  camera-icubSim.xml  camera-icubV3.xml  cameras-icub.xml  cameras-icubSim.xml  cartesian-control-icubGazeboSim.xml  cartesian-control-icubSim.xml  controlModes-icubV3.xml  controlModes.xml  demoRedBall-icubSim.xml  encoders-icub.xml  encoders-icubGazeboSim.xml  encoders-icubSim.xml  encoders-icubV3.xml  ftSensorTests.xml  gaze-control-icubGazeboSim.xml  gaze-control-icubSim.xml  jointsLimits_robotCan.xml  jointsLimits_robotEth.xml  motorControlInterfaces-icub.xml  motorControlInterfaces-icubV3.xml  motorStiction.xml  motors-icub.xml  motors-icubGazeboSim.xml  motors-icubSim.xml  motors-icubV3.xml  motors-icub_v3.xml  positionDirect-icub.xml  positionDirect-icubSim.xml  positionDirect-icubV3.xml  skinWrapper-YarpPluginFixture.xml  skinWrapper-icubSim.xml  streamingChecks.xml  systemStatus-icubV3.xml  (+2 more)
(+575 files in other folders)
